Changelog
=========

8.6-dev0 - (unreleased)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

8.5 - (2018-04-27)
------------------
* Upgrade step: Added upgrade step, plone.app.caching needs to be reimported,
  it has updated registry settings
  [petchesi-iulian refs #94520]
* Change: Modified the pdf view so that the filename request receives the
  correct filename
  [petchesi-iulian refs #94520]

8.4 - (2018-03-19)
------------------
* Feature: Modified portal messages styling and moved the see older versions
  notification to the bottom of the page
  [petchesi-iulian refs #90589]
* Feature: Modified the ordering of elements in the template, modify elements
  style depending on pdf enabled status
  [petchesi-iulian refs #90589]

8.3 - (2018-03-01)
------------------
* Feature: Implemented responsive design and resized the viewer
  [petchesi-iulian refs #90589]
* Feature: Modified the report template and added a browser view which 'serves'
  the pdf file to the viewer, also modified the styling of the reports
  [petchesi-iulian refs #90589]
* Bug fix: avoid js error within report_file.pt by calling js within dom ready
  [ichim-david refs #91577]

8.2 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

8.1 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

8.0 - (2017-08-16)
------------------
* Bug fix W3C compliance modifications
  [valipod refs #86295]
* Feature: Canonical is now pointing to latest report from publication group
  Added tests for this feature
  [zoltan_andras refs #86570]

7.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

7.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

7.7 - (2017-04-24)
------------------