@@ -5,6 +5,12 @@ Changelog
 ---------------------
 * Change: updated URLs pointing to eea.europa.eu with https://
   [alecghica refs #95849]
+* Feature: implemented portal message to inform if the PDF metadata Title is
+  different then the Title from the Plone.
+  [alecghica refs #97572]
+* Change: removed "Automatically fill from publication pdf file metadata"
+  option for Publications 
+  [alecghica refs #97572]
 
 8.5 - (2018-04-27)
 ------------------
